<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_home_gradient"
    tools:context=".FormFragment">

    <TextView
        android:id="@+id/HomePageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form_page_title"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingTop="32dp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal" />


    <EditText
        android:id="@+id/editTextNameSneaker"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:ems="10"
        android:inputType="text"
        android:textFontWeight="@integer/material_motion_duration_medium_1"
        android:hint="@string/name_form"
        android:textColorHint="@color/black"
        tools:ignore="UnusedAttribute" />
    <EditText
        android:id="@+id/editTextPrice"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:ems="10"
        android:inputType="number"
        android:textColorHint="@color/black"
        android:hint="@string/price_form" />
    <EditText
        android:id="@+id/editTextInitialStock"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:ems="10"
        android:inputType="number"
        android:textColorHint="@color/black"
        android:hint="@string/intialInv_form" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <!-- Save Button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">




            <Button
                android:id="@+id/BackBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:padding="12dp"
                android:text="@string/back_btn"
                android:backgroundTint="@color/black"

                />

            <!-- Save Button -->
            <Button
                android:id="@+id/SaveBtn"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:padding="12dp"
                android:layout_marginEnd="8dp"
                android:text="@string/save_btn" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
